2004-04-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: modify realpath when we reach the
	virtual root of the application.

2004-04-12  Nick Drochak <ndrochak@gol.com>

	* WebConfigurationSettings.cs: Fix build.  Forgot the '?'

2004-04-12  Atsushi Enomoto <atsushi@ximian.com>

	* WebConfigurationSettings.cs : On Windows "Web.config" is "web.config".

2004-04-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: "/" is the virtual root directory of
	the application. This fixes a bug reported by Vlad that caused
	configuration error because files were read twice when there's an
	application different from "/" defined.

2004-03-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fixes bug 56267.

2004-03-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: use FileSystemWatcher and really reload
	configuration when the file is created or modified.

2004-02-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: we were loading web.config from / always!
	Thanks to Lluis for noticing this.

2004-02-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fix Web.config search for case
	insensitive filesystems.

2004-02-04  Lluis Sanchez Gual <lluis@ximian.com>

	* WebConfigurationSettings.cs: Load remoting configuration when reading
	  the web.config file.

2004-01-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthConfig.cs:
	* AuthenticationConfigHandler.cs: added RequireSSL and
	SlidingExpiration.

	* HandlerFactoryProxy.cs: not public.
	* HandlerItem.cs: not public.

2004-01-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fix location path lookup. Closes bug
	#53072.

2004-01-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Web.Configuration/GlobalizationConfiguration.cs: undo old fix.

	* System.Web.Configuration/PagesConfiguration.cs: