@@ -1,3 +1,8 @@
+2004-04-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* WebConfigurationSettings.cs: fixed argument exception if the directory
+	we're trying to watch does not exists.
+
 2004-04-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* WebConfigurationSettings.cs: modify realpath when we reach the
